# example-custom-netmiko-cli-test

./: README.md  pyproject.toml
.github/workflows/: ci.yml  run-mock_project.yml
src/example_custom_netmiko_cli_test/: __init__.py  netmiko_cli.py
test_project/: README.md  nr-config.yaml
test_project/inventory_data/: hosts.yaml
test_project/tests/: test_ip_addr.yaml
