[project]
name = "example-custom-netmiko-cli-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Urs Baumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
