[project]
name = "example-custom-netmiko-cli-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Urs Baumann", email = "github@m.ubaumann.ch" }
]
requires-python = ">=3.10"
dependencies = [
    "nuts>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "ruff>=0.7.1",
]
